web/sdk/admin/views/organizations/details/projects/members/members.module.css
.flex1 {
    flex: 1;
}

.dialog-content {
    height: 70vh;
    width: 80vw;
}

.dialog-body {
    height: 100%;
}

.empty-state {
    height: 100%;
}

.empty-state-subheading {
    max-width: 360px;
    text-wrap: auto;
}

.table {
    width: 100%;
    table-layout: fixed;
}

.table-wrapper {
    /* Toolbar height */
    max-height: calc(100% - 90px);
    overflow: scroll;
}

.table-header {
    /* position: relative; */
    z-index: 2;
}

.table-search {
    max-width: 360px;
}

.table-content-wrapper {
    height: 100%;
}

.table-action-column {
    width: 24px;
}

.table-action-dropdown {
    z-index: 10000;
    min-width: 150px;
}

.action-dialog-overlay {
    z-index: 10001;
}

.action-dialog-content {
    z-index: 10002;
}

.add-member-dropdown {
    width: 240px;
    /* position: relative; */
}

.add-member-dropdown-member {
    width: 100%;
}

.add-member-dropdown-member-name {
    max-width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

